# tasksd

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  EchoHandler.cpp  EchoHandler.h  HandlersFactory.cpp  HandlersFactory.h  LICENSE  Main.cpp  NotFoundHandler.h  README.md  RequestStats.h
include/: AckTaskHandler.h  DataStorage.h  GetTaskHandler.h  HandlersFactory.h  IClientHandler.h  IDataStorage.h  IIdGenerator.h  IService.h  IdGenerator.h  PutTaskHandler.h  RegisterClientHandler.h  UnregisterClientHandler.h
src/: AckTaskHandler.cpp  DataStorage.cpp  EchoHandler.cpp  GetTaskHandler.cpp  HandlersFactory.cpp  IdGenerator.cpp  Main.cpp  NotFoundHandler.cpp  PutTaskHandler.cpp  RegisterClientHandler.cpp  UnregisterClientHandler.cpp
